--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./flaresolverr/ks.yaml
   - ./media-storage/ks.yaml
   - ./prowlarr/ks.yaml
- #Q - ./qbittorrent/ks.yaml
+  - ./qbittorrent/ks.yaml
   - ./radarr/ks.yaml
   - ./sonarr/ks.yaml
   - ./sftpgo/ks.yaml
