--- a/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
+++ b/kubernetes/apps/media/qbittorrent/app/helmrelease.yaml
@@ -4,6 +4,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
   name: qbittorrent
+  namespace: media
 spec:
   interval: 30m
   chart:
@@ -101,15 +102,12 @@ spec:
       app:
         className: internal
         hosts:
-          - host: &host qb.${SECRET_DOMAIN}
+          - host: qb.${SECRET_DOMAIN}
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-        # tls:
-        #   - hosts:
-        #       - *host
     persistence:
       config:
         existingClaim: qbittorrent
