--- a/kubernetes/apps/observability/kustomization.yaml
+++ b/kubernetes/apps/observability/kustomization.yaml
@@ -7,7 +7,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./gatus/ks.yaml
-  - ./loki/ks.yaml
+  # - ./loki/ks.yaml
   - ./smartctl-exporter/ks.yaml
   # - ./unpoller/ks.yaml
   - ./vector/ks.yaml
