--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -57,7 +57,7 @@ birdseye:
 ffmpeg:
   global_args: -hide_banner -loglevel warning -threads 2
   hwaccel_args: preset-nvidia-h265
-  input_args: preset-rtsp-restream-low-latency
+  #input_args: preset-rtsp-restream-low-latency
   output_args:
     detect: -threads 2 -f rawvideo -pix_fmt yuv420p -an
     record: preset-record-generic-audio-copy
