--- a/kubernetes/apps/home/frigate/app/resources/config.yml
+++ b/kubernetes/apps/home/frigate/app/resources/config.yml
@@ -1,3 +1,4 @@
+# yaml-language-server: $schema=https://frigate.skynerv.com/api/config/schema.json
 mqtt:
   enabled: True
   host: mosquitto.home.svc.cluster.local
@@ -41,7 +42,7 @@ audio:
     fire_alarm:
       threshold: 0.8
 logger:
-  default: info
+  default: debug
   logs:
     frigate.event: debug
 birdseye:
@@ -324,7 +325,7 @@ cameras:
       order: 3
 ui:
   live_mode: mse
-  use_experimental: True
+  use_experimental: False
   time_format: browser
   date_style: short
   time_style: medium
