--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -25,3 +25,5 @@ resources:
   - ./repos/victoriametrics.yaml
   - ./repos/robusta.yaml
   - ./repos/harbor.yaml
+  - ./repos/go-skynet.yaml
+  - ./repos/k8sgpt.yaml
