--- a/kubernetes/apps/ai/k8sgpt/config/kustomization.yaml
+++ b/kubernetes/apps/ai/k8sgpt/config/kustomization.yaml
@@ -3,8 +3,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./localai/ks.yaml
-  - ./k8sgpt/ks.yaml
-  - ./chatbot-ui/ks.yaml
-  #- ./ollama/ks.yaml
-  #- ./stable-diffusion/ks.yaml
+  - ./externalsecret.yaml
+  - ./k8sgpt.yaml
