--- a/kubernetes/apps/ai/localai/app/kustomization.yaml
+++ b/kubernetes/apps/ai/localai/app/kustomization.yaml
@@ -2,9 +2,6 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: ai
 resources:
-  - ./localai/ks.yaml
-  - ./k8sgpt/ks.yaml
-  - ./chatbot-ui/ks.yaml
-  #- ./ollama/ks.yaml
-  #- ./stable-diffusion/ks.yaml
+  - ./helmrelease.yaml
