--- a/kubernetes/apps/ai/k8sgpt/ks.yaml
+++ b/kubernetes/apps/ai/k8sgpt/ks.yaml
@@ -13,7 +13,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-kubernetes
+    name: home-kubernetes
   dependsOn:
     - name: ai-localai
   interval: 30m
@@ -34,7 +34,7 @@ spec:
   prune: true
   sourceRef:
     kind: GitRepository
-    name: home-ops-kubernetes
+    name: home-kubernetes
   dependsOn:
     - name: ai-k8sgpt-operator
   interval: 30m
