--- a/kubernetes/apps/ai/localai/app/helmrelease.yaml
+++ b/kubernetes/apps/ai/localai/app/helmrelease.yaml
@@ -23,11 +23,13 @@ spec:
     createNamespace: true
     remediation:
       retries: 3
+    timeout: 30m
 
   upgrade:
     cleanupOnFail: true
     remediation:
       retries: 3
+    timeout: 30m
 
   uninstall:
     keepHistory: false
