--- a/kubernetes/apps/ai/localai/app/helmrelease.yaml
+++ b/kubernetes/apps/ai/localai/app/helmrelease.yaml
@@ -58,14 +58,24 @@ spec:
         memory: 12G
         nvidia.com/gpu: 1
 
+    promptTemplates:
+      ggml-gpt4all-j.tmpl: |
+        The prompt below is a question to answer, a task to complete, or a conversation to respond to; decide which and write an appropriate response.
+        ### Prompt:
+        {{.Input}}
+        ### Response:
+      llama-2-7b-chat.ggmlv3.q4_0.tmpl: |
+        The prompt below is a question to answer, a task to complete, or a conversation to respond to; decide which and write an appropriate response.
+        ### Prompt:
+        {{.Input}}
+        ### Response:
     models:
       forceDownload: false
       list:
-        - url: "https://gpt4all.io/models/ggml-gpt4all-j.bin"
-      #  - url: "https://huggingface.co/TheBloke/Mistral-7B-Instruct-v0.1-GGUF/resolve/main/mistral-7b-instruct-v0.1.Q4_K_M.gguf"
-      #  - url: "https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/resolve/main/llama-2-7b-chat.ggmlv3.q4_0.bin"
-      #  - url: "https://huggingface.co/TheBloke/Luna-AI-Llama2-Uncensored-GGUF/resolve/main/luna-ai-llama2-uncensored.Q4_0.gguf"
-      #  - url: "https://huggingface.co/chitanda/llama2.7b.chat.reclor.gpt35turbo1106.dpo-sft.H100.w4.v2.0"
+      - url: "https://gpt4all.io/models/ggml-gpt4all-j.bin"
+      - url: "https://huggingface.co/TheBloke/Mistral-7B-Instruct-v0.1-GGUF/resolve/main/mistral-7b-instruct-v0.1.Q4_K_M.gguf"
+      - url: "https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/resolve/main/llama-2-7b-chat.ggmlv3.q4_0.bin"
+        # basicAuth: base64EncodedCredentials
 
     persistence:
       models:
@@ -86,7 +96,7 @@ spec:
 
     service:
       annotations:
-        io.cilium/lb-ipam-ips: ${SVC_LOCALAI_ADDR}
+        io.cilium/lb-ipam-ips: 192.168.108.44
       type: LoadBalancer
       ports:
         http:
