--- a/kubernetes/apps/ai/localai/app/helmrelease.yaml
+++ b/kubernetes/apps/ai/localai/app/helmrelease.yaml
@@ -41,7 +41,7 @@ spec:
       runtimeClassName: nvidia
       image:
         repository: quay.io/go-skynet/local-ai
-        tag: v2.15.0
+        tag: v2.16.0-aio-gpu-nvidia-cuda-12
 
       env:
         rebuild: false
