--- a/kubernetes/apps/ai/localai/app/helmrelease.yaml
+++ b/kubernetes/apps/ai/localai/app/helmrelease.yaml
@@ -47,7 +47,7 @@ spec:
         rebuild: false
         debug: true
         OPENAI_API_KEY: "sk-XXXXXXXXXXXXXXXXXXXX"
-        #preload_models: '[{ "id": "huggingface@thebloke__open-llama-13b-open-instruct-ggml__open-llama-13b-open-instruct.ggmlv3.q3_k_m.bin", "name": "gpt-3.5-turbo", "overrides": { "f16": true, "mmap": true }}]'
+        PRELOAD_MODELS: '[{"url": "github:go-skynet/model-gallery/gpt4all-j.yaml", "name": "gpt-3.5-turbo"}]'
 
     resources:
       requests:
@@ -72,9 +72,9 @@ spec:
     models:
       forceDownload: false
       list:
-      - url: "https://gpt4all.io/models/ggml-gpt4all-j.bin"
-      - url: "https://huggingface.co/TheBloke/Mistral-7B-Instruct-v0.1-GGUF/resolve/main/mistral-7b-instruct-v0.1.Q4_K_M.gguf"
-      - url: "https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/resolve/main/llama-2-7b-chat.ggmlv3.q4_0.bin"
+      # - url: "https://gpt4all.io/models/ggml-gpt4all-j.bin"
+      # - url: "https://huggingface.co/TheBloke/Mistral-7B-Instruct-v0.1-GGUF/resolve/main/mistral-7b-instruct-v0.1.Q4_K_M.gguf"
+      # - url: "https://huggingface.co/TheBloke/Llama-2-7B-Chat-GGML/resolve/main/llama-2-7b-chat.ggmlv3.q4_0.bin"
         # basicAuth: base64EncodedCredentials
 
     persistence:
