--- a/kubernetes/apps/ai/k8sgpt/config/k8sgpt.yaml
+++ b/kubernetes/apps/ai/k8sgpt/config/k8sgpt.yaml
@@ -9,7 +9,7 @@ spec:
     backend: localai
     baseUrl: http://localai-local-ai.ai.svc.cluster.local:80/v1
     #model: gpt-3.5-turbo
-    model: ggml-gpt4all-j
+    model: gpt-4
     secret:
       name: localai-api-key-secret
       key: localai-api-key
