--- a/kubernetes/apps/ai/kustomization.yaml
+++ b/kubernetes/apps/ai/kustomization.yaml
@@ -5,7 +5,5 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   - ./localai/ks.yaml
-  - ./k8sgpt/ks.yaml
-  - ./chatbot-ui/ks.yaml
-  #- ./ollama/ks.yaml
+  - ./ollama/ks.yaml
   #- ./stable-diffusion/ks.yaml
