--- a/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       version: 3.1.0
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-charts
+        name: bjw-s
         namespace: flux-system
   maxHistory: 2
   install:
@@ -39,7 +39,7 @@ spec:
               OLLAMA_API_BASE_URL: http://ollama.ai.svc:11434/api
             resources:
               requests:
-                cpu: 200m
+                cpu: 20m
                 memory: 2Gi
               limits:
                 memory: 2Gi
@@ -55,11 +55,6 @@ spec:
       main:
         enabled: true
         className: internal
-        annotations:
-          hajimari.io/appName: "Ollama"
-          hajimari.io/enable: "true"
-          hajimari.io/instance: "admin"
-          hajimari.io/group: "AI"
         hosts:
           - host: &host ollama.${SECRET_DOMAIN}
             paths:
