--- a/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
@@ -62,3 +62,6 @@ spec:
                 service:
                   identifier: main
                   port: *port
+        tls:
+          - hosts:
+              - *host
