--- a/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
@@ -71,6 +71,6 @@ spec:
     persistence:
       config:
         enabled: true
-        existingClaim: *app
+        existingClaim: ollama-ui
         globalMounts:
           - path: /app/backend/data
