--- a/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/ollama/ui/helmrelease.yaml
@@ -1,20 +1,19 @@
 ---
-apiVersion: helm.toolkit.fluxcd.io/v2beta2
+# yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/main/charts/other/app-template/schemas/helmrelease-helm-v2beta2.schema.json
+apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: &app ollama-ui
-  namespace: ai
+  name: &app openwebui
 spec:
   interval: 30m
   chart:
     spec:
       chart: app-template
-      version: 3.1.0
+      version: 3.2.1
       sourceRef:
         kind: HelmRepository
         name: bjw-s
         namespace: flux-system
-  maxHistory: 2
   install:
     remediation:
       retries: 3
@@ -26,12 +25,12 @@ spec:
     keepHistory: false
   values:
     controllers:
-      main:
+      openwebui:
         type: deployment
         annotations:
           reloader.stakater.com/auto: "true"
         containers:
-          main:
+          app:
             image:
               repository: ghcr.io/open-webui/open-webui
               tag: main
@@ -42,35 +41,47 @@ spec:
               capabilities: { drop: ["ALL"] }
             resources:
               requests:
-                cpu: 20m
-                memory: 1Gi
+                cpu: 200m
               limits:
-                memory: 2Gi
+                memory: 1024Mi
+            probes:
+              liveness:
+                enabled: true
+              readiness:
+                enabled: true
+              startup:
+                enabled: false
+        # pod:
+        #   securityContext:
+        #     runAsUser: 568
+        #     runAsGroup: 568
+        #     runAsNonRoot: true
+        #     fsGroup: 568
+        #     fsGroupChangePolicy: OnRootMismatch
     service:
-      main:
-        controller: main
+      app:
+        controller: openwebui
         ports:
           http:
-            port: &port 8080
+            port: 8080
     ingress:
-      main:
-        enabled: true
+      app:
         className: external
         annotations:
-          external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
+          external-dns.alpha.kubernetes.io/target: external.${SECRET_DOMAIN}
         hosts:
-          - host: &host chat.${SECRET_DOMAIN}
+          - host: &host "chat.${SECRET_DOMAIN}"
             paths:
               - path: /
                 service:
-                  identifier: main
-                  port: *port
+                  identifier: app
+                  port: http
         tls:
           - hosts:
               - *host
     persistence:
       config:
         enabled: true
-        existingClaim: ollama-ui
+        existingClaim: *app
         globalMounts:
           - path: /app/backend/data
