--- a/kubernetes/apps/ai/ollama/ui/pvc.yaml
+++ b/kubernetes/apps/ai/ollama/ui/pvc.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ollama-ui
+  name: openwebui
 spec:
   accessModes: ["ReadWriteOnce"]
   resources:
