--- a/kubernetes/apps/ai/stable-diffusion/ui/helmrelease.yaml
+++ b/kubernetes/apps/ai/stable-diffusion/ui/helmrelease.yaml
@@ -12,7 +12,7 @@ spec:
       version: 2.5.0
       sourceRef:
         kind: HelmRepository
-        name: bjw-s-charts
+        name: bjw-s
         namespace: flux-system
 
   maxHistory: 2
@@ -31,15 +31,12 @@ spec:
 
   values:
     defaultPodOptions:
-      # runtimeClassName: nvidia
+      runtimeClassName: nvidia
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
         fsGroup: 1000
         fsGroupChangePolicy: OnRootMismatch
-
-      nodeSelector:
-        intel.feature.node.kubernetes.io/gpu: "true"
 
     controllers:
       main:
@@ -50,25 +47,22 @@ spec:
           main:
             image:
               repository: ghcr.io/gabe565/stable-diffusion/webui
-              tag: 1.7.0
+              tag: 1.9.3
               pullPolicy: IfNotPresent
             args:
-            - --medvram
             - --xformers
             env:
               IIB_ACCESS_CONTROL_ALLOWED_PATHS: /app/outputs
               TZ: ${TIMEZONE}
-              # NVIDIA_VISIBLE_DEVICES: all
-              # NVIDIA_DRIVER_CAPABILITIES: all
 
             resources:
               requests:
-                cpu: 200m
-                memory: 8Gi
-                gpu.intel.com/i915: "1"
+                cpu: 20m
+                memory: 1Gi
+                nvidia.com/gpu: "1"
               limits:
                 memory: 8Gi
-                gpu.intel.com/i915: "1"
+                nvidia.com/gpu: "1"
 
     service:
       main:
@@ -80,19 +74,16 @@ spec:
       main:
         enabled: true
         className: internal
-        annotations:
-          hajimari.io/enable: "true"
-          hajimari.io/appName: "Stable Diffusion"
-          hajimari.io/icon: mdi:camera
-          hajimari.io/group: "AI"
-          hajimari.io/instance: "admin"
         hosts:
-        - host: &host sd.${SECRET_DOMAIN}
-          paths:
-          - path: /
-            service:
-              identifier: main
-              port: *httpPort
+          - host: &host sd.${SECRET_DOMAIN}
+            paths:
+            - path: /
+              service:
+                identifier: main
+                port: *httpPort
+        tls:
+          - hosts:
+              - *host
 
     persistence:
       data:
