--- a/kubernetes/apps/ai/kustomization.yaml
+++ b/kubernetes/apps/ai/kustomization.yaml
@@ -4,6 +4,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  - ./localai/ks.yaml
+  # - ./localai/ks.yaml
   - ./ollama/ks.yaml
   - ./stable-diffusion/ks.yaml
