--- a/kubernetes/apps/ai/kustomization.yaml
+++ b/kubernetes/apps/ai/kustomization.yaml
@@ -6,4 +6,4 @@ resources:
   - ./namespace.yaml
   # - ./localai/ks.yaml
   - ./ollama/ks.yaml
-  # - ./stable-diffusion/ks.yaml
+  - ./stable-diffusion/ks.yaml
