--- a/kubernetes/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
@@ -33,7 +33,7 @@ spec:
             args:
               - --log-level
               - info
-              - --device=$(DEVICE_SONOFF_ZIGBEE)
+              - --device $(DEVICE_SONOFF_ZIGBEE)
             env:
               DEVICE_SONOFF_ZIGBEE: |-
                 name: sonoff_zigbee
