--- a/kubernetes/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/generic-device-plugin/app/helmrelease.yaml
@@ -33,13 +33,19 @@ spec:
             args:
               - --log-level
               - info
-              - --device=$(DEVICE_SONOFF_ZIGBEE)
-            env:
-              DEVICE_SONOFF_ZIGBEE: |-
+              # - --device=$(DEVICE_SONOFF_ZIGBEE)
+              - --device
+              - |
                 name: sonoff_zigbee
                 groups:
                   - paths:
-                      - path: /dev/ttyACM*
+                      - path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20240122203435-if00
+            # env:
+            #   DEVICE_SONOFF_ZIGBEE: |-
+            #     name: sonoff_zigbee
+            #     groups:
+            #       - paths:
+            #           - path: /dev/serial/by-id/usb-ITEAD_SONOFF_Zigbee_3.0_USB_Dongle_Plus_V2_20240122203435-if00
             resources:
               requests:
                 cpu: 10m
