--- a/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
@@ -74,7 +74,7 @@ spec:
               drop:
                 - ALL
       certificate:
-        requestAutoCert: true
+        requestAutoCert: false
       prometheusOperator: true
       metrics:
         enabled: true
