--- a/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
+++ b/kubernetes/apps/storage/minio/tenant/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
         - name: MINIO_PROMETHEUS_URL
           value: "http://vmselect-victoria-metrics.observability.svc.cluster.local:8481/select/0/prometheus"
         - name: MINIO_SERVER_URL
-          value: https://minio.storage.svc
+          value: http://minio.storage.svc
         - name: MINIO_PROMETHEUS_AUTH_TYPE
           value: public
       buckets:
