--- a/kubernetes/apps/storage/minio/tenant/ingress.yaml
+++ b/kubernetes/apps/storage/minio/tenant/ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: "minio-s3-console-ingress"
   namespace: storage
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/server-snippet: |
@@ -36,7 +36,7 @@ metadata:
   name: "minio-s3-ingress"
   namespace: storage
   annotations:
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/server-snippet: |
@@ -69,7 +69,7 @@ metadata:
   namespace: storage
   annotations:
     external-dns.alpha.kubernetes.io/hostname: "*.s3.${SECRET_DOMAIN}"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/proxy-body-size: "0"
     nginx.ingress.kubernetes.io/server-snippet: |
