--- a/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
@@ -57,6 +57,15 @@ spec:
             runAsGroup: 568
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
+          podAffinity:
+            requiredDuringSchedulingIgnoredDuringExecution:
+            - labelSelector:
+                matchExpressions:
+                - key: app.kubernetes.io/instance
+                  operator: In
+                  values:
+                  - home-assistant
+              topologyKey: failure-domain.beta.kubernetes.io/zone
     service:
       main:
         controller: main
