--- a/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
@@ -64,8 +64,9 @@ spec:
                   matchExpressions:
                   - key: app.kubernetes.io/name
                     operator: In
-                    values: ["home-assistant"]
-                # topologyKey: kubernetes.io/hostname
+                    values:
+                    - home-assistant
+                topologyKey: kubernetes.io/hostname
     service:
       main:
         controller: main
