--- a/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
@@ -62,7 +62,7 @@ spec:
               requiredDuringSchedulingIgnoredDuringExecution:
               - labelSelector:
                   matchExpressions:
-                  - key: app.kubernetes.io/name
+                  - key: "app.kubernetes.io/name"
                     operator: In
                     values:
                     - home-assistant
