--- a/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/code/helmrelease.yaml
@@ -57,16 +57,8 @@ spec:
             runAsGroup: 568
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
-          affinity:
-            podAffinity:
-              requiredDuringSchedulingIgnoredDuringExecution:
-              - labelSelector:
-                  matchExpressions:
-                  - key: "app.kubernetes.io/name"
-                    operator: In
-                    values:
-                    - home-assistant
-                topologyKey: kubernetes.io/hostname
+          nodeSelector:
+            sonoff.feature.node.kubernetes.io/dongle-e: "true"
     service:
       main:
         controller: main
