--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -50,9 +50,7 @@ spec:
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
-              privileged: true
-              capabilities:
-                add: ["CAP_SYS_RAWIO"]
+              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 10m
@@ -109,6 +107,7 @@ spec:
         enabled: true
         type: hostPath
         hostPath: /dev/ttyACM0
+        hostPathType: CharDevice
         globalMounts:
         - path: /dev/ttyACM0
       tmp:
