--- a/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
+++ b/kubernetes/apps/home/home-assistant/app/helmrelease.yaml
@@ -64,7 +64,7 @@ spec:
           securityContext:
             runAsUser: 1000
             runAsGroup: 1000
-            runAsNonRoot: true
+            runAsNonRoot: false
             fsGroup: 568
             fsGroupChangePolicy: OnRootMismatch
           nodeSelector:
